[package]
name = "binance_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
awc = { version = "3.1.1", features = ["tls-rustls", "rustls"] }
fern = "0.6.2"
futures-util = "0.3.28"
log = "0.4.19"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
